cmake_minimum_required(VERSION 3.13)
project(tic_tac_toe_gles)

set(CMAKE_CXX_STANDARD 14)

include_directories(boilerplate)
include_directories(Game)
include_directories(includes)
include_directories(includes/glm-trunk/glm)
include_directories(includes/glm-trunk/glm/detail)
include_directories(includes/glm-trunk/glm/gtc)
include_directories(includes/glm-trunk/glm/gtx)
include_directories(includes/glm-trunk/glm/simd)
include_directories(includes/glm-trunk/test/external/gli)
include_directories(includes/glm-trunk/test/external/gli/core)
include_directories(includes/glm-trunk/test/external/gli/gtx)
include_directories(SoundSystem)

add_executable(tic_tac_toe_gles
		boilerplate/CAnimation.cpp
		boilerplate/CAnimation.h
		boilerplate/GLES2Lesson.cpp
		boilerplate/GLES2Lesson.h
		boilerplate/glue.h
		boilerplate/main.cpp
		boilerplate/Material.cpp
		boilerplate/Material.h
		boilerplate/MaterialList.cpp
		boilerplate/MaterialList.h
		boilerplate/MeshObject.cpp
		boilerplate/MeshObject.h
		boilerplate/NativeBitmap.cpp
		boilerplate/NativeBitmap.h
		boilerplate/render.cpp
		boilerplate/Scene.cpp
		boilerplate/Scene.h
		boilerplate/Texture.cpp
		boilerplate/Texture.h
		boilerplate/Trig.cpp
		boilerplate/Trig.h
		boilerplate/TrigBatch.cpp
		boilerplate/TrigBatch.h
		boilerplate/WavefrontOBJReader.cpp
		boilerplate/WavefrontOBJReader.h
		boilerplate/x11.cpp
		boilerplate/x11_gcc.cpp
		Game/Game.cpp
		Game/Game.h
		Game/GameRenderListener.cpp
		Game/GameRenderListener.h
		includes/glm-trunk/glm/detail/_features.hpp
		includes/glm-trunk/glm/detail/_fixes.hpp
		includes/glm-trunk/glm/detail/_noise.hpp
		includes/glm-trunk/glm/detail/_swizzle.hpp
		includes/glm-trunk/glm/detail/_swizzle_func.hpp
		includes/glm-trunk/glm/detail/_vectorize.hpp
		includes/glm-trunk/glm/detail/dummy.cpp
		includes/glm-trunk/glm/detail/func_common.hpp
		includes/glm-trunk/glm/detail/func_common.inl
		includes/glm-trunk/glm/detail/func_common_simd.inl
		includes/glm-trunk/glm/detail/func_exponential.hpp
		includes/glm-trunk/glm/detail/func_exponential.inl
		includes/glm-trunk/glm/detail/func_exponential_simd.inl
		includes/glm-trunk/glm/detail/func_geometric.hpp
		includes/glm-trunk/glm/detail/func_geometric.inl
		includes/glm-trunk/glm/detail/func_geometric_simd.inl
		includes/glm-trunk/glm/detail/func_integer.hpp
		includes/glm-trunk/glm/detail/func_integer.inl
		includes/glm-trunk/glm/detail/func_integer_simd.inl
		includes/glm-trunk/glm/detail/func_matrix.hpp
		includes/glm-trunk/glm/detail/func_matrix.inl
		includes/glm-trunk/glm/detail/func_matrix_simd.inl
		includes/glm-trunk/glm/detail/func_packing.hpp
		includes/glm-trunk/glm/detail/func_packing.inl
		includes/glm-trunk/glm/detail/func_packing_simd.inl
		includes/glm-trunk/glm/detail/func_trigonometric.hpp
		includes/glm-trunk/glm/detail/func_trigonometric.inl
		includes/glm-trunk/glm/detail/func_trigonometric_simd.inl
		includes/glm-trunk/glm/detail/func_vector_relational.hpp
		includes/glm-trunk/glm/detail/func_vector_relational.inl
		includes/glm-trunk/glm/detail/func_vector_relational_simd.inl
		includes/glm-trunk/glm/detail/glm.cpp
		includes/glm-trunk/glm/detail/precision.hpp
		includes/glm-trunk/glm/detail/setup.hpp
		includes/glm-trunk/glm/detail/type_float.hpp
		includes/glm-trunk/glm/detail/type_gentype.hpp
		includes/glm-trunk/glm/detail/type_gentype.inl
		includes/glm-trunk/glm/detail/type_half.hpp
		includes/glm-trunk/glm/detail/type_half.inl
		includes/glm-trunk/glm/detail/type_int.hpp
		includes/glm-trunk/glm/detail/type_mat.hpp
		includes/glm-trunk/glm/detail/type_mat.inl
		includes/glm-trunk/glm/detail/type_mat2x2.hpp
		includes/glm-trunk/glm/detail/type_mat2x2.inl
		includes/glm-trunk/glm/detail/type_mat2x3.hpp
		includes/glm-trunk/glm/detail/type_mat2x3.inl
		includes/glm-trunk/glm/detail/type_mat2x4.hpp
		includes/glm-trunk/glm/detail/type_mat2x4.inl
		includes/glm-trunk/glm/detail/type_mat3x2.hpp
		includes/glm-trunk/glm/detail/type_mat3x2.inl
		includes/glm-trunk/glm/detail/type_mat3x3.hpp
		includes/glm-trunk/glm/detail/type_mat3x3.inl
		includes/glm-trunk/glm/detail/type_mat3x4.hpp
		includes/glm-trunk/glm/detail/type_mat3x4.inl
		includes/glm-trunk/glm/detail/type_mat4x2.hpp
		includes/glm-trunk/glm/detail/type_mat4x2.inl
		includes/glm-trunk/glm/detail/type_mat4x3.hpp
		includes/glm-trunk/glm/detail/type_mat4x3.inl
		includes/glm-trunk/glm/detail/type_mat4x4.hpp
		includes/glm-trunk/glm/detail/type_mat4x4.inl
		includes/glm-trunk/glm/detail/type_mat4x4_simd.inl
		includes/glm-trunk/glm/detail/type_vec.hpp
		includes/glm-trunk/glm/detail/type_vec.inl
		includes/glm-trunk/glm/detail/type_vec1.hpp
		includes/glm-trunk/glm/detail/type_vec1.inl
		includes/glm-trunk/glm/detail/type_vec2.hpp
		includes/glm-trunk/glm/detail/type_vec2.inl
		includes/glm-trunk/glm/detail/type_vec3.hpp
		includes/glm-trunk/glm/detail/type_vec3.inl
		includes/glm-trunk/glm/detail/type_vec4.hpp
		includes/glm-trunk/glm/detail/type_vec4.inl
		includes/glm-trunk/glm/detail/type_vec4_simd.inl
		includes/glm-trunk/glm/gtc/bitfield.hpp
		includes/glm-trunk/glm/gtc/bitfield.inl
		includes/glm-trunk/glm/gtc/color_space.hpp
		includes/glm-trunk/glm/gtc/color_space.inl
		includes/glm-trunk/glm/gtc/constants.hpp
		includes/glm-trunk/glm/gtc/constants.inl
		includes/glm-trunk/glm/gtc/epsilon.hpp
		includes/glm-trunk/glm/gtc/epsilon.inl
		includes/glm-trunk/glm/gtc/functions.hpp
		includes/glm-trunk/glm/gtc/functions.inl
		includes/glm-trunk/glm/gtc/integer.hpp
		includes/glm-trunk/glm/gtc/integer.inl
		includes/glm-trunk/glm/gtc/matrix_access.hpp
		includes/glm-trunk/glm/gtc/matrix_access.inl
		includes/glm-trunk/glm/gtc/matrix_integer.hpp
		includes/glm-trunk/glm/gtc/matrix_inverse.hpp
		includes/glm-trunk/glm/gtc/matrix_inverse.inl
		includes/glm-trunk/glm/gtc/matrix_transform.hpp
		includes/glm-trunk/glm/gtc/matrix_transform.inl
		includes/glm-trunk/glm/gtc/noise.hpp
		includes/glm-trunk/glm/gtc/noise.inl
		includes/glm-trunk/glm/gtc/packing.hpp
		includes/glm-trunk/glm/gtc/packing.inl
		includes/glm-trunk/glm/gtc/quaternion.hpp
		includes/glm-trunk/glm/gtc/quaternion.inl
		includes/glm-trunk/glm/gtc/quaternion_simd.inl
		includes/glm-trunk/glm/gtc/random.hpp
		includes/glm-trunk/glm/gtc/random.inl
		includes/glm-trunk/glm/gtc/reciprocal.hpp
		includes/glm-trunk/glm/gtc/reciprocal.inl
		includes/glm-trunk/glm/gtc/round.hpp
		includes/glm-trunk/glm/gtc/round.inl
		includes/glm-trunk/glm/gtc/type_aligned.hpp
		includes/glm-trunk/glm/gtc/type_precision.hpp
		includes/glm-trunk/glm/gtc/type_precision.inl
		includes/glm-trunk/glm/gtc/type_ptr.hpp
		includes/glm-trunk/glm/gtc/type_ptr.inl
		includes/glm-trunk/glm/gtc/ulp.hpp
		includes/glm-trunk/glm/gtc/ulp.inl
		includes/glm-trunk/glm/gtc/vec1.hpp
		includes/glm-trunk/glm/gtc/vec1.inl
		includes/glm-trunk/glm/gtx/associated_min_max.hpp
		includes/glm-trunk/glm/gtx/associated_min_max.inl
		includes/glm-trunk/glm/gtx/bit.hpp
		includes/glm-trunk/glm/gtx/bit.inl
		includes/glm-trunk/glm/gtx/closest_point.hpp
		includes/glm-trunk/glm/gtx/closest_point.inl
		includes/glm-trunk/glm/gtx/color_space.hpp
		includes/glm-trunk/glm/gtx/color_space.inl
		includes/glm-trunk/glm/gtx/color_space_YCoCg.hpp
		includes/glm-trunk/glm/gtx/color_space_YCoCg.inl
		includes/glm-trunk/glm/gtx/common.hpp
		includes/glm-trunk/glm/gtx/common.inl
		includes/glm-trunk/glm/gtx/compatibility.hpp
		includes/glm-trunk/glm/gtx/compatibility.inl
		includes/glm-trunk/glm/gtx/component_wise.hpp
		includes/glm-trunk/glm/gtx/component_wise.inl
		includes/glm-trunk/glm/gtx/dual_quaternion.hpp
		includes/glm-trunk/glm/gtx/dual_quaternion.inl
		includes/glm-trunk/glm/gtx/euler_angles.hpp
		includes/glm-trunk/glm/gtx/euler_angles.inl
		includes/glm-trunk/glm/gtx/extend.hpp
		includes/glm-trunk/glm/gtx/extend.inl
		includes/glm-trunk/glm/gtx/extended_min_max.hpp
		includes/glm-trunk/glm/gtx/extended_min_max.inl
		includes/glm-trunk/glm/gtx/fast_exponential.hpp
		includes/glm-trunk/glm/gtx/fast_exponential.inl
		includes/glm-trunk/glm/gtx/fast_square_root.hpp
		includes/glm-trunk/glm/gtx/fast_square_root.inl
		includes/glm-trunk/glm/gtx/fast_trigonometry.hpp
		includes/glm-trunk/glm/gtx/fast_trigonometry.inl
		includes/glm-trunk/glm/gtx/float_notmalize.inl
		includes/glm-trunk/glm/gtx/gradient_paint.hpp
		includes/glm-trunk/glm/gtx/gradient_paint.inl
		includes/glm-trunk/glm/gtx/handed_coordinate_space.hpp
		includes/glm-trunk/glm/gtx/handed_coordinate_space.inl
		includes/glm-trunk/glm/gtx/hash.hpp
		includes/glm-trunk/glm/gtx/hash.inl
		includes/glm-trunk/glm/gtx/integer.hpp
		includes/glm-trunk/glm/gtx/integer.inl
		includes/glm-trunk/glm/gtx/intersect.hpp
		includes/glm-trunk/glm/gtx/intersect.inl
		includes/glm-trunk/glm/gtx/io.hpp
		includes/glm-trunk/glm/gtx/io.inl
		includes/glm-trunk/glm/gtx/log_base.hpp
		includes/glm-trunk/glm/gtx/log_base.inl
		includes/glm-trunk/glm/gtx/matrix_cross_product.hpp
		includes/glm-trunk/glm/gtx/matrix_cross_product.inl
		includes/glm-trunk/glm/gtx/matrix_decompose.hpp
		includes/glm-trunk/glm/gtx/matrix_decompose.inl
		includes/glm-trunk/glm/gtx/matrix_interpolation.hpp
		includes/glm-trunk/glm/gtx/matrix_interpolation.inl
		includes/glm-trunk/glm/gtx/matrix_major_storage.hpp
		includes/glm-trunk/glm/gtx/matrix_major_storage.inl
		includes/glm-trunk/glm/gtx/matrix_operation.hpp
		includes/glm-trunk/glm/gtx/matrix_operation.inl
		includes/glm-trunk/glm/gtx/matrix_query.hpp
		includes/glm-trunk/glm/gtx/matrix_query.inl
		includes/glm-trunk/glm/gtx/matrix_transform_2d.hpp
		includes/glm-trunk/glm/gtx/matrix_transform_2d.inl
		includes/glm-trunk/glm/gtx/mixed_product.hpp
		includes/glm-trunk/glm/gtx/mixed_product.inl
		includes/glm-trunk/glm/gtx/norm.hpp
		includes/glm-trunk/glm/gtx/norm.inl
		includes/glm-trunk/glm/gtx/normal.hpp
		includes/glm-trunk/glm/gtx/normal.inl
		includes/glm-trunk/glm/gtx/normalize_dot.hpp
		includes/glm-trunk/glm/gtx/normalize_dot.inl
		includes/glm-trunk/glm/gtx/number_precision.hpp
		includes/glm-trunk/glm/gtx/number_precision.inl
		includes/glm-trunk/glm/gtx/optimum_pow.hpp
		includes/glm-trunk/glm/gtx/optimum_pow.inl
		includes/glm-trunk/glm/gtx/orthonormalize.hpp
		includes/glm-trunk/glm/gtx/orthonormalize.inl
		includes/glm-trunk/glm/gtx/perpendicular.hpp
		includes/glm-trunk/glm/gtx/perpendicular.inl
		includes/glm-trunk/glm/gtx/polar_coordinates.hpp
		includes/glm-trunk/glm/gtx/polar_coordinates.inl
		includes/glm-trunk/glm/gtx/projection.hpp
		includes/glm-trunk/glm/gtx/projection.inl
		includes/glm-trunk/glm/gtx/quaternion.hpp
		includes/glm-trunk/glm/gtx/quaternion.inl
		includes/glm-trunk/glm/gtx/range.hpp
		includes/glm-trunk/glm/gtx/raw_data.hpp
		includes/glm-trunk/glm/gtx/raw_data.inl
		includes/glm-trunk/glm/gtx/rotate_normalized_axis.hpp
		includes/glm-trunk/glm/gtx/rotate_normalized_axis.inl
		includes/glm-trunk/glm/gtx/rotate_vector.hpp
		includes/glm-trunk/glm/gtx/rotate_vector.inl
		includes/glm-trunk/glm/gtx/scalar_multiplication.hpp
		includes/glm-trunk/glm/gtx/scalar_relational.hpp
		includes/glm-trunk/glm/gtx/scalar_relational.inl
		includes/glm-trunk/glm/gtx/spline.hpp
		includes/glm-trunk/glm/gtx/spline.inl
		includes/glm-trunk/glm/gtx/std_based_type.hpp
		includes/glm-trunk/glm/gtx/std_based_type.inl
		includes/glm-trunk/glm/gtx/string_cast.hpp
		includes/glm-trunk/glm/gtx/string_cast.inl
		includes/glm-trunk/glm/gtx/transform.hpp
		includes/glm-trunk/glm/gtx/transform.inl
		includes/glm-trunk/glm/gtx/transform2.hpp
		includes/glm-trunk/glm/gtx/transform2.inl
		includes/glm-trunk/glm/gtx/type_aligned.hpp
		includes/glm-trunk/glm/gtx/type_aligned.inl
		includes/glm-trunk/glm/gtx/type_trait.hpp
		includes/glm-trunk/glm/gtx/type_trait.inl
		includes/glm-trunk/glm/gtx/vector_angle.hpp
		includes/glm-trunk/glm/gtx/vector_angle.inl
		includes/glm-trunk/glm/gtx/vector_query.hpp
		includes/glm-trunk/glm/gtx/vector_query.inl
		includes/glm-trunk/glm/gtx/wrap.hpp
		includes/glm-trunk/glm/gtx/wrap.inl
		includes/glm-trunk/glm/simd/common.h
		includes/glm-trunk/glm/simd/exponential.h
		includes/glm-trunk/glm/simd/geometric.h
		includes/glm-trunk/glm/simd/integer.h
		includes/glm-trunk/glm/simd/matrix.h
		includes/glm-trunk/glm/simd/packing.h
		includes/glm-trunk/glm/simd/platform.h
		includes/glm-trunk/glm/simd/trigonometric.h
		includes/glm-trunk/glm/simd/vector_relational.h
		includes/glm-trunk/glm/common.hpp
		includes/glm-trunk/glm/exponential.hpp
		includes/glm-trunk/glm/ext.hpp
		includes/glm-trunk/glm/fwd.hpp
		includes/glm-trunk/glm/geometric.hpp
		includes/glm-trunk/glm/glm.hpp
		includes/glm-trunk/glm/integer.hpp
		includes/glm-trunk/glm/mat2x2.hpp
		includes/glm-trunk/glm/mat2x3.hpp
		includes/glm-trunk/glm/mat2x4.hpp
		includes/glm-trunk/glm/mat3x2.hpp
		includes/glm-trunk/glm/mat3x3.hpp
		includes/glm-trunk/glm/mat3x4.hpp
		includes/glm-trunk/glm/mat4x2.hpp
		includes/glm-trunk/glm/mat4x3.hpp
		includes/glm-trunk/glm/mat4x4.hpp
		includes/glm-trunk/glm/matrix.hpp
		includes/glm-trunk/glm/packing.hpp
		includes/glm-trunk/glm/trigonometric.hpp
		includes/glm-trunk/glm/vec2.hpp
		includes/glm-trunk/glm/vec3.hpp
		includes/glm-trunk/glm/vec4.hpp
		includes/glm-trunk/glm/vector_relational.hpp
		includes/glm-trunk/test/core/core_func_common.cpp
		includes/glm-trunk/test/core/core_func_exponential.cpp
		includes/glm-trunk/test/core/core_func_geometric.cpp
		includes/glm-trunk/test/core/core_func_integer.cpp
		includes/glm-trunk/test/core/core_func_integer_bit_count.cpp
		includes/glm-trunk/test/core/core_func_integer_find_lsb.cpp
		includes/glm-trunk/test/core/core_func_integer_find_msb.cpp
		includes/glm-trunk/test/core/core_func_matrix.cpp
		includes/glm-trunk/test/core/core_func_noise.cpp
		includes/glm-trunk/test/core/core_func_packing.cpp
		includes/glm-trunk/test/core/core_func_swizzle.cpp
		includes/glm-trunk/test/core/core_func_trigonometric.cpp
		includes/glm-trunk/test/core/core_func_vector_relational.cpp
		includes/glm-trunk/test/core/core_setup_force_cxx98.cpp
		includes/glm-trunk/test/core/core_setup_message.cpp
		includes/glm-trunk/test/core/core_setup_precision.cpp
		includes/glm-trunk/test/core/core_type_cast.cpp
		includes/glm-trunk/test/core/core_type_ctor.cpp
		includes/glm-trunk/test/core/core_type_float.cpp
		includes/glm-trunk/test/core/core_type_int.cpp
		includes/glm-trunk/test/core/core_type_length.cpp
		includes/glm-trunk/test/core/core_type_mat2x2.cpp
		includes/glm-trunk/test/core/core_type_mat2x3.cpp
		includes/glm-trunk/test/core/core_type_mat2x4.cpp
		includes/glm-trunk/test/core/core_type_mat3x2.cpp
		includes/glm-trunk/test/core/core_type_mat3x3.cpp
		includes/glm-trunk/test/core/core_type_mat3x4.cpp
		includes/glm-trunk/test/core/core_type_mat4x2.cpp
		includes/glm-trunk/test/core/core_type_mat4x3.cpp
		includes/glm-trunk/test/core/core_type_mat4x4.cpp
		includes/glm-trunk/test/core/core_type_vec1.cpp
		includes/glm-trunk/test/core/core_type_vec2.cpp
		includes/glm-trunk/test/core/core_type_vec3.cpp
		includes/glm-trunk/test/core/core_type_vec4.cpp
		includes/glm-trunk/test/external/gli/core/dummy.cpp
		includes/glm-trunk/test/external/gli/core/generate_mipmaps.hpp
		includes/glm-trunk/test/external/gli/core/generate_mipmaps.inl
		includes/glm-trunk/test/external/gli/core/image2d.hpp
		includes/glm-trunk/test/external/gli/core/image2d.inl
		includes/glm-trunk/test/external/gli/core/operation.hpp
		includes/glm-trunk/test/external/gli/core/operation.inl
		includes/glm-trunk/test/external/gli/core/operator.hpp
		includes/glm-trunk/test/external/gli/core/operator.inl
		includes/glm-trunk/test/external/gli/core/shared_array.hpp
		includes/glm-trunk/test/external/gli/core/shared_array.inl
		includes/glm-trunk/test/external/gli/core/shared_ptr.hpp
		includes/glm-trunk/test/external/gli/core/shared_ptr.inl
		includes/glm-trunk/test/external/gli/core/size.hpp
		includes/glm-trunk/test/external/gli/core/size.inl
		includes/glm-trunk/test/external/gli/core/texture2d.hpp
		includes/glm-trunk/test/external/gli/core/texture2d.inl
		includes/glm-trunk/test/external/gli/core/texture2d_array.hpp
		includes/glm-trunk/test/external/gli/core/texture2d_array.inl
		includes/glm-trunk/test/external/gli/core/texture_cube.hpp
		includes/glm-trunk/test/external/gli/core/texture_cube.inl
		includes/glm-trunk/test/external/gli/core/texture_cube_array.hpp
		includes/glm-trunk/test/external/gli/core/texture_cube_array.inl
		includes/glm-trunk/test/external/gli/gtx/compression.hpp
		includes/glm-trunk/test/external/gli/gtx/compression.inl
		includes/glm-trunk/test/external/gli/gtx/fetch.hpp
		includes/glm-trunk/test/external/gli/gtx/fetch.inl
		includes/glm-trunk/test/external/gli/gtx/gl_texture2d.hpp
		includes/glm-trunk/test/external/gli/gtx/gl_texture2d.inl
		includes/glm-trunk/test/external/gli/gtx/gradient.hpp
		includes/glm-trunk/test/external/gli/gtx/gradient.inl
		includes/glm-trunk/test/external/gli/gtx/loader.hpp
		includes/glm-trunk/test/external/gli/gtx/loader.inl
		includes/glm-trunk/test/external/gli/gtx/loader_dds10.hpp
		includes/glm-trunk/test/external/gli/gtx/loader_dds10.inl
		includes/glm-trunk/test/external/gli/gtx/loader_dds9.hpp
		includes/glm-trunk/test/external/gli/gtx/loader_dds9.inl
		includes/glm-trunk/test/external/gli/gtx/loader_tga.hpp
		includes/glm-trunk/test/external/gli/gtx/loader_tga.inl
		includes/glm-trunk/test/external/gli/gtx/wavelet.hpp
		includes/glm-trunk/test/external/gli/gtx/wavelet.inl
		includes/glm-trunk/test/external/gli/gli.hpp
		includes/glm-trunk/test/gtc/gtc_bitfield.cpp
		includes/glm-trunk/test/gtc/gtc_color_space.cpp
		includes/glm-trunk/test/gtc/gtc_constants.cpp
		includes/glm-trunk/test/gtc/gtc_epsilon.cpp
		includes/glm-trunk/test/gtc/gtc_functions.cpp
		includes/glm-trunk/test/gtc/gtc_integer.cpp
		includes/glm-trunk/test/gtc/gtc_matrix_access.cpp
		includes/glm-trunk/test/gtc/gtc_matrix_integer.cpp
		includes/glm-trunk/test/gtc/gtc_matrix_inverse.cpp
		includes/glm-trunk/test/gtc/gtc_matrix_transform.cpp
		includes/glm-trunk/test/gtc/gtc_noise.cpp
		includes/glm-trunk/test/gtc/gtc_packing.cpp
		includes/glm-trunk/test/gtc/gtc_quaternion.cpp
		includes/glm-trunk/test/gtc/gtc_random.cpp
		includes/glm-trunk/test/gtc/gtc_reciprocal.cpp
		includes/glm-trunk/test/gtc/gtc_round.cpp
		includes/glm-trunk/test/gtc/gtc_type_aligned.cpp
		includes/glm-trunk/test/gtc/gtc_type_precision.cpp
		includes/glm-trunk/test/gtc/gtc_type_ptr.cpp
		includes/glm-trunk/test/gtc/gtc_ulp.cpp
		includes/glm-trunk/test/gtc/gtc_user_defined_types.cpp
		includes/glm-trunk/test/gtc/gtc_vec1.cpp
		includes/glm-trunk/test/gtx/gtx_associated_min_max.cpp
		includes/glm-trunk/test/gtx/gtx_closest_point.cpp
		includes/glm-trunk/test/gtx/gtx_color_space.cpp
		includes/glm-trunk/test/gtx/gtx_color_space_YCoCg.cpp
		includes/glm-trunk/test/gtx/gtx_common.cpp
		includes/glm-trunk/test/gtx/gtx_compatibility.cpp
		includes/glm-trunk/test/gtx/gtx_component_wise.cpp
		includes/glm-trunk/test/gtx/gtx_dual_quaternion.cpp
		includes/glm-trunk/test/gtx/gtx_euler_angle.cpp
		includes/glm-trunk/test/gtx/gtx_extend.cpp
		includes/glm-trunk/test/gtx/gtx_extended_min_max.cpp
		includes/glm-trunk/test/gtx/gtx_extented_min_max.cpp
		includes/glm-trunk/test/gtx/gtx_fast_exponential.cpp
		includes/glm-trunk/test/gtx/gtx_fast_square_root.cpp
		includes/glm-trunk/test/gtx/gtx_fast_trigonometry.cpp
		includes/glm-trunk/test/gtx/gtx_gradient_paint.cpp
		includes/glm-trunk/test/gtx/gtx_handed_coordinate_space.cpp
		includes/glm-trunk/test/gtx/gtx_int_10_10_10_2.cpp
		includes/glm-trunk/test/gtx/gtx_integer.cpp
		includes/glm-trunk/test/gtx/gtx_intersect.cpp
		includes/glm-trunk/test/gtx/gtx_io.cpp
		includes/glm-trunk/test/gtx/gtx_log_base.cpp
		includes/glm-trunk/test/gtx/gtx_matrix_cross_product.cpp
		includes/glm-trunk/test/gtx/gtx_matrix_decompose.cpp
		includes/glm-trunk/test/gtx/gtx_matrix_interpolation.cpp
		includes/glm-trunk/test/gtx/gtx_matrix_major_storage.cpp
		includes/glm-trunk/test/gtx/gtx_matrix_operation.cpp
		includes/glm-trunk/test/gtx/gtx_matrix_query.cpp
		includes/glm-trunk/test/gtx/gtx_matrix_transform_2d.cpp
		includes/glm-trunk/test/gtx/gtx_mixed_product.cpp
		includes/glm-trunk/test/gtx/gtx_norm.cpp
		includes/glm-trunk/test/gtx/gtx_normal.cpp
		includes/glm-trunk/test/gtx/gtx_normalize_dot.cpp
		includes/glm-trunk/test/gtx/gtx_number_precision.cpp
		includes/glm-trunk/test/gtx/gtx_optimum_pow.cpp
		includes/glm-trunk/test/gtx/gtx_orthonormalize.cpp
		includes/glm-trunk/test/gtx/gtx_perpendicular.cpp
		includes/glm-trunk/test/gtx/gtx_polar_coordinates.cpp
		includes/glm-trunk/test/gtx/gtx_projection.cpp
		includes/glm-trunk/test/gtx/gtx_quaternion.cpp
		includes/glm-trunk/test/gtx/gtx_random.cpp
		includes/glm-trunk/test/gtx/gtx_range.cpp
		includes/glm-trunk/test/gtx/gtx_rotate_normalized_axis.cpp
		includes/glm-trunk/test/gtx/gtx_rotate_vector.cpp
		includes/glm-trunk/test/gtx/gtx_scalar_multiplication.cpp
		includes/glm-trunk/test/gtx/gtx_scalar_relational.cpp
		includes/glm-trunk/test/gtx/gtx_simd_mat4.cpp
		includes/glm-trunk/test/gtx/gtx_simd_vec4.cpp
		includes/glm-trunk/test/gtx/gtx_spline.cpp
		includes/glm-trunk/test/gtx/gtx_string_cast.cpp
		includes/glm-trunk/test/gtx/gtx_type_aligned.cpp
		includes/glm-trunk/test/gtx/gtx_type_trait.cpp
		includes/glm-trunk/test/gtx/gtx_vector_angle.cpp
		includes/glm-trunk/test/gtx/gtx_vector_query.cpp
		includes/glm-trunk/test/gtx/gtx_wrap.cpp
		SoundSystem/SoundClip.cpp
		SoundSystem/SoundClip.h
		SoundSystem/SoundEmitter.cpp
		SoundSystem/SoundEmitter.h
		SoundSystem/SoundListener.cpp
		SoundSystem/SoundListener.h
		SoundSystem/SoundUtils.cpp
		SoundSystem/SoundUtils.h)
